--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/image": "^0.16.6",
     "@astrojs/netlify": "^2.2.2",
     "@astrojs/rss": "^2.4.0",
+    "@astrojs/sitemap": "^1.2.2",
     "astro": "^2.2.1",
     "sass": "^1.62.1"
   }
